# outmem

./: LICENSE  README.md  config.yaml  improve.md  pyproject.toml
.github/workflows/: autoresearch.yml  publish.yml
docs/: autoresearch.md  cli.md  configuration.md  development.md  features.md  growing-the-wiki.md  python-api.md  search.md
evals/: README.md  __init__.py  config.py  harness.py  run.py  subagent_e2e.py
evals/cases/: __init__.py  approval.py  contradictions.py  convergence.py  duplicates.py  expansion.py  ingestion.py  multi_author.py  writeback.py
evals/fixtures/wikis/multi-author-divergence/: CONTRIBUTORS.md  SEED.md
evals/fixtures/wikis/pricing-cost-plus/: CONTRIBUTORS.md
evals/fixtures/wikis/temporal-evolution/: SEED.md  config.yaml
evals/judges/: __init__.py  llm_judge.py  trace.py
examples/starter-wiki/: CONTRIBUTORS.md  README.md  config.yaml
examples/starter-wiki/log/: 2026-05-01.md
examples/starter-wiki/raw/: acme-msa-text.md  pricing-deck-2026-Q1.md
examples/starter-wiki/wiki/pages/: acme-msa.md  pricing-formula.md
specs/: concept.md  planning_prompt.md  spec.md
src/outmem/: __init__.py  _logfire.py  _progress.py  _sqlite.py  _time.py  backlinks.py  config.py  exceptions.py  frontmatter.py  git_ops.py  history.py  identity.py  index.py  lint.py  observability.py  relevance.py  search.py  skills.py  slug.py  sources.py  state.py  store.py
src/outmem/_store/: import_vault.py  semantic.py  sources.py
src/outmem/adapters/: __init__.py  pydantic_ai.py
src/outmem/agent/: __init__.py  approval.py  runtime.py  service.py
src/outmem/agent/prompts/: system.j2
src/outmem/cli/: __init__.py  __main__.py
src/outmem/dashboard/: __init__.py  app.py  router.py  service.py
src/outmem/dashboard/templates/: base.html.j2  (+3 more)
src/outmem/optimize/: __init__.py  bench.py  blocks.py  dataset.py  dsl.py  optimizer.py
src/outmem/semantic/: __init__.py  chunker.py  embeddings.py  store.py  testing.py
tests/: conftest.py  test_adapters_pydantic_ai.py  test_agent.py  test_approval.py  test_backlinks.py  test_cli.py  test_config.py  test_dashboard.py  test_evals_fixtures.py  test_frontmatter.py  test_git_lock.py  test_git_ops.py  test_history.py  test_identity.py  test_import_vault.py  test_index.py  test_ingest.py  test_lint.py  test_logfire_setup.py  test_optimize.py  test_relevance.py  test_search.py  test_semantic.py  test_skills_bundle.py  test_slug.py  test_sources.py  test_state.py  test_store.py
(+29 files in other folders)
